# fastapi-template

./: .dockerignore  .env.example  .env.sample  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  .test  Dockerfile  Dockerfile.lambda  Dockerfile.web  LICENSE.md  Makefile  Procfile  alembic.ini  bak_flake8.ini  docker-compose.ecs.yml  docker-compose.es.yml  docker-compose.yml  flake8.ini  logger_config.yaml  main.py  makemigrations.sh  migrate.sh  mypy.ini  project_tree.txt  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  serve.sh  tree.txt
.aws/: ecs-task-definition.json
.devcontainer/: devcontainer.json
.docker/: docker-compose.ecs.yml
.github/workflows/: aws.yml  push_ecr.yml  test.yml
.history/: pyproject_20220521135244.toml  readme_20220521150156.md
.history/app/api/endpoints/: jobs_20220511230829.py  jobs_20220524214537.py  jobs_20220524214540.py  jobs_20220524214542.py  jobs_20220524214545.py  jobs_20220524214550.py  jobs_20220524214557.py  jobs_20220524214559.py  jobs_20220524214600.py  jobs_20220524214602.py  jobs_20220524214603.py  jobs_20220524214608.py  jobs_20220524214612.py  jobs_20220524214616.py  jobs_20220524214618.py  jobs_20220524214634.py  jobs_20220524214639.py
.history/docs/: mkdocs_20220521140544.yml  mkdocs_20220521140550.yml  mkdocs_20220521140555.yml  mkdocs_20220521140557.yml  mkdocs_20220521140850.yml  mkdocs_20220521140923.yml  mkdocs_20220521141226.yml  mkdocs_20220521141231.yml  mkdocs_20220521141242.yml  mkdocs_20220521143051.yml  mkdocs_20220521143054.yml  mkdocs_20220521143059.yml  mkdocs_20220521143102.yml  mkdocs_20220521143107.yml  mkdocs_20220521143108.yml  mkdocs_20220521143111.yml  mkdocs_20220521143113.yml  mkdocs_20220521143119.yml  mkdocs_20220521143139.yml  mkdocs_20220521143159.yml  mkdocs_20220521143201.yml  mkdocs_20220521143203.yml  mkdocs_20220521143213.yml  mkdocs_20220521143228.yml  mkdocs_20220521143241.yml  mkdocs_20220521143249.yml  mkdocs_20220521143250.yml  mkdocs_20220521143253.yml  mkdocs_20220521143258.yml  mkdocs_20220521143259.yml  mkdocs_20220521143301.yml  mkdocs_20220521143308.yml  mkdocs_20220521143312.yml  mkdocs_20220521143321.yml  mkdocs_20220521143327.yml  mkdocs_20220521143331.yml  mkdocs_20220521143333.yml  mkdocs_20220521143335.yml  mkdocs_20220521143339.yml  mkdocs_20220521143340.yml  (+24 more)
.history/docs/docs/: install_20220521141156.md  instration_20220521141110.md
_batch/: test.py
alembic/: env.py
alembic/versions/: 20220318-2304_.py  20220322-2206_.py  20220322-2253_.py  20220323-2155_.py  20220325-0000_.py  20220325-0005_.py  20220403-0857_.py  20220511-1434_.py  20221222-1504_.py  20230131-0237_.py
api/endpoints/: categories.py  develop.py  jobs.py  login.py  tasks.py  users.py
app/: app.py  app_manager.py  logger_config.yaml  main.py
app/api/apps/: admin_app.py  other_app.py
app/api/endpoints/: admin.py  auth.py  categories.py  develop.py  jobs.py  login.py  other_api.py  tasks.py  todos.py  users.py
app/batch/: __set_base_path__.py  test.py
app/commands/: user_creation.py
app/core/: auth.py  config.py  database.py  language_analyer.py  language_analyzer.py  utils.py
app/core/logger/: __init__.py  logger.py  my_memory_handler.py
app/crud/: __init__.py  base.py  category.py  job.py  tag.py  todo.py  user.py
app/crud_v2/: __init__.py  base.py  tag.py  todo.py  user.py
app/exceptions/: __init__.py  core.py  error_messages.py  exception_handlers.py
app/models/: __init__.py  base.py  category.py  jobs.py  tags.py  todos.py  todos_tags.py  users.py
app/schemas/: __init__.py  category.py  core.py  job.py  language_analyzer.py  request_info.py  tag.py  todo.py  token.py  user.py
app/tests/: conftest.py
app/tests/api/: jobs_test.py  users_test.py
app/tests/core/: language_analyzer_test.py
app/tests/crud/: bulk_insert_test.py  jobs_test.py
app/tests/locust/: locustfile.py
app/tests/rest_client/: elasticsearch.http
app/tests/test_data/: bulk_data_test.py  dump.dbml  dump.structure.sql  dump_docker_db_sql.sh  jobs.py
app/tests/utils/: test_crud.py  test_db_decorator.py  user.py  utils.py
batch/: __set_base_path__.py  test.py
commands/: __main__.py  __set_base_path__.py  batch.py  serve.py  testing.py  user_creation.py
core/: auth.py  config.py  database.py  utils.py
core/logger/: __init__.py  logger.py  my_memory_handler.py
crud/: __init__.py  base.py  category.py  job.py  user.py
docs/: mkdocs.yml
docs/docs/: install.md
elasticsearch/: docker-compose.yml  readme.md
elasticsearch/elasticsearch/: Dockerfile  Dockerfile.es
elasticsearch/logstash/: Dockerfile
elasticsearch/logstash/pipeline/: main.conf
exceptions/: __init__.py  core.py  error_messages.py  exception_handlers.py
frontend_sample/: package-lock.json  package.json
frontend_sample/src/: config.ts
frontend_sample/src/api_clients/: api.ts  base.ts  client.ts  common.ts  configuration.ts  index.ts
frontend_sample/src/components/templates/jobs/JobUpdateTemplate/: JobsUpdateTemplate.tsx
frontend_sample/src/components/templates/jobs/JobsListTemplate/: JobsListTemplate.tsx
frontend_sample/src/lib/hooks/api/: index.ts  todos.ts
frontend_sample/src/pages/: _app.tsx  index.tsx
frontend_sample/src/pages/jobs/: edit.tsx  list.tsx
frontend_sample/src/pages/todos/: create.tsx  edit.tsx  list.tsx
frontend_sample/src/styles/: Home.module.css
frontend_sample/src/types/api/: index.ts
models/: __init__.py  base.py  category.py  jobs.py  users.py
schemas/: __init__.py  category.py  core.py  job.py  token.py  user.py
seeder/: run.py
seeder/seeds_json/: todos.json  users.json
tests/: base.py  conftest.py  testing_utils.py
tests/api/: jobs.py  jobs_test.py  users_test.py
tests/crud/: bulk_insert_test.py  jobs.py  jobs_test.py
tests/locust/: locustfile.py
tests/pydantic_performances/: test_performances.py
tests/test_data/: __init__.py  bulk_data_test.py  jobs.py
tests/todos/: conftest.py  test_todos.py
tests/utils/: test_crud.py  test_db_decorator.py  user.py  utils.py
(+3 files in other folders)
