[project]
name = "fastapi-mybest-template"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "yoneya.takashi", email = "takashi002013@gmail.com" }
]
dependencies = [
    "uvicorn~=0.22.0",
    "sentry-sdk~=1.24.0",
    "mysqlclient~=2.1.1",
    "ulid-py~=1.1.0",
    "python-jose~=3.3.0",
    "toml~=0.10.2",
    "PyYAML~=6.0",
    "python-multipart~=0.0.6",
    "python-json-logger~=2.0.7",
    "mysql-connector-python~=8.0.33",
    "bcrypt~=4.0.1",
    "humps~=0.2.2",
    "fire~=0.5.0",
    "alembic~=1.11.1",
    "sqlalchemyseed~=2.0.0",
    "pytest-mysql~=2.4.2",
    "httpx~=0.24.1",
    "SQLALchemy~=2.0.15",
    "aiomysql~=0.1.1",
    "pytest-asyncio~=0.21.0",
    "mangum~=0.17.0",
    "passlib~=1.7.4",
    "pydantic_settings>=2.0.0",
    "fastapi>=0.100.0",
    "pydantic[email]>=2.0.2",
    "fastapi-debug-toolbar>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff~=0.0.270"]
[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py310"
select = ["ALL"]
exclude = [".venv", "alembic"]
ignore = [
    "G004", # `logging-f-string`
    "PLC1901", # compare-to-empty-string
    "PLR2004", # magic-value-comparison
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN401", # any-type
    "ERA", # commented-out-code
    "ARG002", # unused-method-argument
    "INP001", # implicit-namespace-package
    "PGH004", # blanket-noqa
    "B008", # Dependsで使用するため
    "A002", # builtin-argument-shadowing
    "A003", # builtin-attribute-shadowing
    "PLR0913", # too-many-arguments
    "RSE", # flake8-raise
    "D", # pydocstyle
    "C90", # mccabe
    "T20", # flake8-print
    "SLF", #  flake8-self
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "TRY", # tryceratops
    "COM", # flake8-commas
    "S", # flake8-bandit
    "EM",#flake8-errmsg
    "EXE", # flake8-executable
    "ICN", # flake8-import-conventions
    "RET",#flake8-return
    "SIM",#flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", #pathlibを使わないコードが多いので、除外する
    "ISC", #flake8-implicit-str-concat
    "N", # pep8-naming
    "PT", # flake8-pytest-style
    "RUF012", # pydanticとの相性が悪いので一旦無効化
    "TD002",
    "TD003",
    "FIX002" # TODOの記述がエラーになるため
]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
